add joinspace
