# ragbag-server/src/main/java/de/serbroda/ragbag/controller/UserController.java
@@ -2,6 +2,7 @@ package de.serbroda.ragbag.controller;
 
 import static de.serbroda.ragbag.config.AppConstants.PUBLIC_API_PREFIX;
 
+import de.serbroda.ragbag.security.JwtService;
 import de.serbroda.ragbag.security.SecurityUtils;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
@@ -18,6 +19,8 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 @RequestMapping(PUBLIC_API_PREFIX + "/v1/users")
 public class UserController {
+
+    private final JwtService jwtService;
 
     @Operation(summary = "Get current user info")
     @GetMapping("/me")
